fix scrollbar

--- a/views/assets/css/argon-dashboard.css
+++ b/views/assets/css/argon-dashboard.css
@@ -29278,6 +29278,7 @@ feature/account
 
 #sidenav-collapse-main{
   height: 100%;
+  overflow: hidden;
 }
 
 #sidenav-main{
